src/assets/styles/_floating-ui.scss
$floating-ui-transform-bottom: translateY(-5px);
$floating-ui-transform-top: translateY(5px);
$floating-ui-transform-left: translateX(5px);
$floating-ui-transform-right: translateX(-5px);
$floating-ui-default-z-index: 900;

:root {
  --calcite-floating-ui-transition: var(--calcite-animation-timing);
}

@mixin floatingUIAnim {
  .calcite-floating-ui-anim {
    position: relative;
    transition: var(--calcite-floating-ui-transition);
    visibility: hidden;
    transition-property: transform, visibility, opacity;
    opacity: 0;
    box-shadow: $shadow-2;
    @apply rounded z-default;
  }
}

@mixin floatingUIAnimActive {
  opacity: 1;
  visibility: visible;
  transform: translate(0);
}

@mixin floatingUIElemAnim($selector) {
  #{$selector} {
    @include floatingUIAnim();

    &[data-placement^="bottom"] .calcite-floating-ui-anim {
      transform: $floating-ui-transform-bottom;
    }

    &[data-placement^="top"] .calcite-floating-ui-anim {
      transform: $floating-ui-transform-top;
    }

    &[data-placement^="left"] .calcite-floating-ui-anim {
      transform: $floating-ui-transform-left;
    }

    &[data-placement^="right"] .calcite-floating-ui-anim {
      transform: $floating-ui-transform-right;
    }

    &[data-placement] .calcite-floating-ui-anim--active {
      @include floatingUIAnimActive();
    }
  }
}

@mixin floatingUIHostAnim {
  @include floatingUIAnim();

  :host([data-placement^="bottom"]) .calcite-floating-ui-anim {
    transform: $floating-ui-transform-bottom;
  }

  :host([data-placement^="top"]) .calcite-floating-ui-anim {
    transform: $floating-ui-transform-top;
  }

  :host([data-placement^="left"]) .calcite-floating-ui-anim {
    transform: $floating-ui-transform-left;
  }

  :host([data-placement^="right"]) .calcite-floating-ui-anim {
    transform: $floating-ui-transform-right;
  }

  :host([data-placement]) .calcite-floating-ui-anim--active {
    @include floatingUIAnimActive();
  }
}

@mixin floatingUIContainer($zIndex: $floating-ui-default-z-index) {
  display: block;
  position: absolute;
  z-index: $zIndex;
}

@mixin floatingUIWrapper {
  visibility: hidden;
  pointer-events: none;
  inline-size: 0;
  block-size: 0;
  overflow: hidden;
}

@mixin floatingUIWrapperActive {
  pointer-events: initial;
  visibility: visible;
  inline-size: unset;
  block-size: unset;
  overflow: unset;
}

@mixin floatingUIHost($zIndex: $floating-ui-default-z-index) {
  :host {
    @include floatingUIContainer($zIndex);
  }

  @include floatingUIHostAnim();

  @include calciteHydratedHidden();
}

$pointer_size: 8px;
$pointer_offset: -$pointer_size * 0.5;

@mixin floatingUIArrow {
  .arrow,
  .arrow::before {
    position: absolute;
    inline-size: $pointer_size;
    block-size: $pointer_size;
    @apply -z-default;
  }

  .arrow::before {
    content: "";
    @apply shadow-1;
    transform: rotate(45deg);
    background: var(--calcite-ui-foreground-1);
  }

  :host([data-placement^="top"]) .arrow {
    inset-block-end: $pointer_offset;
  }

  :host([data-placement^="bottom"]) .arrow {
    inset-block-start: $pointer_offset;
  }

  :host([data-placement^="left"]) .arrow {
    direction: ltr;
    inset-inline-end: $pointer_offset;
  }

  :host([data-placement^="right"]) .arrow {
    direction: ltr;
    inset-inline-start: $pointer_offset;
  }
}

